--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,11 +1,10 @@
 .header {
-  background: #56d56dd0;
-  // padding: 10px 0;
-  color: #fff;
-  width: 100%;
-  justify-content: center;
   display: flex;
+  justify-content: center;
+  width: 100%;
   height: 65px;
+  background: #56d56dd0;
+  color: #fff;
 
   .container {
     display: flex;
@@ -13,22 +12,21 @@
     justify-content: space-between;
     width: 1300px;
 
-    @media (max-width: 768px) {
-      flex-direction: column;
-    }
+    // @media (max-width: 768px) {
+    //   flex-direction: column;
+    // }
   }
 
   &__nav {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    width: 550px;
+    width: 650px;
+    height: 30px;
     align-items: center;
   }
 
   &__logo {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
     width: 190px;
@@ -47,5 +45,19 @@
 
   &__inscription {
     font-size: 24px;
+  }
+
+  &__person {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    font-size: 24px;
+    color: #fff;
+
+    .logo_cabinet {
+      display: flex;
+      align-items: center;
+      margin-left: 9px;
+    }
   }
 }
