--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,26 +1,18 @@
 .header {
   display: flex;
   justify-content: center;
+
+  justify-content: space-around;
+  align-items: center;
   width: 100%;
   height: 65px;
   background: #56d56dd0;
   color: #fff;
 
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 1300px;
-
-    // @media (max-width: 768px) {
-    //   flex-direction: column;
-    // }
-  }
-
   &__nav {
     display: flex;
     justify-content: space-between;
-    width: 650px;
+    width: 750px;
     height: 30px;
     align-items: center;
   }
@@ -28,7 +20,7 @@
   &__logo {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    // align-items: flex-end;
     width: 190px;
 
     h1 {
@@ -44,6 +36,7 @@
   }
 
   &__inscription {
+    color: #fff;
     font-size: 24px;
   }
 
