--- a/src/pages/user-pages/registration-page/registrationPage.scss
+++ b/src/pages/user-pages/registration-page/registrationPage.scss
@@ -11,12 +11,13 @@
 .registration {
   display: flex;
   flex-direction: column;
-  width: 1440px;
+  width: 1140px;
   height: 700px;
 }
 
 .bloc-tabs {
   display: flex;
+  justify-content: center;
   align-items: flex-end;
   position: relative;
   height: 35px;
@@ -39,42 +40,61 @@ button {
   width: 250px;
 }
 
-.content-tabs {
-  flex-grow: 1;
-}
-.content {
-  background: white;
-  padding: 20px;
-  width: 100%;
-  height: 100%;
-  display: none;
-}
-
-.content h2 {
-  padding: 0px 0 5px 0px;
-}
-
-.content hr {
-  width: 100px;
-  height: 2px;
-  background: #222;
-  margin-bottom: 5px;
-}
-
-.content p {
-  width: 100%;
-  height: 100%;
-}
-
-.active-content {
-  display: block;
-}
-
 .content-form {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 400px;
+  height: 500px;
   width: 100%;
-  border: 1px solid green;
+  border: 1px solid rgba(0, 0, 0, 0.274);
 }
+
+// .content {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   background: white;
+//   padding: 20px;
+//   width: 100%;
+//   height: 100%;
+//   display: none;
+
+//   input {
+//     width: 100%;
+//     padding: 10px;
+//     font-size: 18px;
+//   }
+
+//   .field-item {
+//     display: flex;
+//     flex-direction: column;
+//     margin: 20px;
+//     color: #56d56dd0;
+//   }
+// }
+
+// .active-content {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+
+//   button {
+//     margin-top: 5px;
+//     background-color: white; /* Green */
+//     border-radius: 8px;
+//     color: white;
+//     padding: 15px 32px;
+//     text-align: center;
+//     text-decoration: none;
+//     display: inline-block;
+//     font-size: 16px;
+//     transition-duration: 0.4s;
+//     color: black;
+
+//     &:hover {
+//       background-color: #4caf50; /* Green */
+//       color: white;
+//     }
+//   }
+// }
