--- a/src/components/user-form/userForm.scss
+++ b/src/components/user-form/userForm.scss
@@ -1,3 +1,13 @@
+.content-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.274);
+}
+
 .content {
   display: flex;
   justify-content: center;
