--- a/src/pages/user-pages/registration-page/registrationPage.scss
+++ b/src/pages/user-pages/registration-page/registrationPage.scss
@@ -42,6 +42,7 @@ button {
 
 .content-form {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 500px;
