--- a/src/components/oraganization-form/organizationForm.scss
+++ b/src/components/oraganization-form/organizationForm.scss
@@ -1,32 +1,18 @@
-.content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: white;
-  padding: 20px;
-  width: 100%;
-  height: 100%;
+.content-org-form {
   display: none;
-
-  input {
-    width: 100%;
-    padding: 10px;
-    font-size: 18px;
-  }
-
-  .field-item {
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
-    color: #56d56dd0;
-  }
 }
 
-.active-content {
+.active-content-org-form {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  align-items: flex-start;
+
+  .block-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
 
   button {
     margin-top: 5px;
