--- a/src/components/oraganization-form/organizationForm.scss
+++ b/src/components/oraganization-form/organizationForm.scss
@@ -1,3 +1,31 @@
+.block-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+
+  button {
+    margin-top: 50px;
+    background-color: white;
+    border-radius: 8px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    color: black;
+
+    &:hover {
+      background-color: #4caf50;
+      color: white;
+    }
+  }
+}
+
 .content-org-form {
   display: none;
 }
@@ -12,24 +40,5 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-  }
-
-  button {
-    margin-top: 5px;
-    background-color: white; /* Green */
-    border-radius: 8px;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    transition-duration: 0.4s;
-    color: black;
-
-    &:hover {
-      background-color: #4caf50; /* Green */
-      color: white;
-    }
   }
 }
