--- a/src/pages/user-pages/registration-page/registrationPage.scss
+++ b/src/pages/user-pages/registration-page/registrationPage.scss
@@ -41,7 +41,7 @@ button {
   width: 250px;
 }
 
-.content-form {
+.content-forms {
   display: flex;
   flex-direction: column;
   justify-content: center;
