--- a/src/pages/user-pages/registration-page/registrationPage.scss
+++ b/src/pages/user-pages/registration-page/registrationPage.scss
@@ -48,5 +48,5 @@ button {
   align-items: center;
   // height: 500px;
   width: 100%;
-  // border: 1px solid rgba(0, 0, 0, 0.274);
+  border: 1px solid rgba(0, 0, 0, 0.274);
 }
