--- a/src/components/oraganization-form/organizationForm.scss
+++ b/src/components/oraganization-form/organizationForm.scss
@@ -26,11 +26,11 @@
   }
 }
 
-.content-org-form {
+.content-block-org-form {
   display: none;
 }
 
-.active-content-org-form {
+.active-content-block-org-form {
   display: flex;
   justify-content: space-around;
   width: 100%;
