--- a/src/pages/user-pages/registration-page/registrationPage.scss
+++ b/src/pages/user-pages/registration-page/registrationPage.scss
@@ -46,7 +46,7 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // height: 500px;
+  height: 500px;
   width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.274);
 }
