--- a/src/components/user-form/userForm.scss
+++ b/src/components/user-form/userForm.scss
@@ -1,46 +1,14 @@
-.content-form {
+.block-user-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  height: 500px;
   width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.274);
-}
-
-.content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: white;
-  padding: 20px;
-  width: 100%;
-  // height: 100%;
-  display: none;
-
-  input {
-    width: 100%;
-    padding: 10px;
-    font-size: 18px;
-  }
-
-  .field-item {
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
-    color: #56d56dd0;
-  }
-}
-
-.active-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  height: 100%;
   align-items: center;
 
   button {
-    margin-top: 5px;
-    background-color: white; /* Green */
+    margin-top: 50px;
+    background-color: white;
     border-radius: 8px;
     color: white;
     padding: 15px 32px;
@@ -52,8 +20,25 @@
     color: black;
 
     &:hover {
-      background-color: #4caf50; /* Green */
+      background-color: #4caf50;
       color: white;
     }
+  }
+}
+
+.content-block-user-form {
+  display: none;
+}
+
+.active-content-block-user-form {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  align-items: flex-start;
+
+  .block-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
 }
