--- a/src/components/oraganization-form/organizationForm.scss
+++ b/src/components/oraganization-form/organizationForm.scss
@@ -7,7 +7,6 @@
   flex-direction: column;
   justify-content: space-around;
   width: 100%;
-  // align-items: flex-start;
 }
 
 .block-org-input {
@@ -18,14 +17,40 @@
 
   .block-content {
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
+    align-items: center;
+    margin: 20px;
   }
 
-  .sumbit-button {
+  .sumbit-input {
     display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
+    justify-content: center;
+    margin-top: 40px;
+
+    input {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      // margin-top: 20px;
+      // width: 400px;
+      height: 45px;
+
+      background-color: white;
+      border-radius: 8px;
+      color: white;
+      // padding: 15px 30px;
+      text-align: center;
+      text-decoration: none;
+      // display: inline-block;
+      font-size: 16px;
+      transition-duration: 0.4s;
+      color: black;
+
+      &:hover {
+        background-color: #4caf50;
+        color: white;
+      }
+    }
   }
 
   button {
