--- a/src/components/user-form/userForm.scss
+++ b/src/components/user-form/userForm.scss
@@ -1,44 +1,51 @@
-.block-user-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-
-  button {
-    margin-top: 50px;
-    background-color: white;
-    border-radius: 8px;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    transition-duration: 0.4s;
-    color: black;
-
-    &:hover {
-      background-color: #4caf50;
-      color: white;
-    }
-  }
-}
-
 .content-block-user-form {
   display: none;
 }
 
 .active-content-block-user-form {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
   width: 100%;
-  align-items: flex-start;
+}
 
-  .block-input {
+.block-user-input {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  .block-user-content {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
+    height: 300px;
+  }
+
+  .sumbit-user-input {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+
+    input {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 45px;
+      background-color: white;
+      border-radius: 8px;
+      color: white;
+      padding: 0px 5px;
+      text-align: center;
+      text-decoration: none;
+      font-size: 16px;
+      transition-duration: 0.4s;
+      color: black;
+
+      &:hover {
+        background-color: #4caf50;
+        color: white;
+      }
+    }
   }
 }
