--- a/src/components/admin-components/admin-header/adminHeader.scss
+++ b/src/components/admin-components/admin-header/adminHeader.scss
@@ -1,6 +1,6 @@
 .header-admin {
   display: flex;
-  position: fixed;
+  // position: fixed;
   justify-content: center;
 
   justify-content: space-around;
