--- a/src/components/user-components/user-form/userForm.scss
+++ b/src/components/user-components/user-form/userForm.scss
@@ -27,7 +27,7 @@
     justify-content: center;
     margin-top: 40px;
 
-    button {
+    input {
       display: flex;
       justify-content: center;
       align-items: center;
