--- a/src/components/user-components/user-header/userHeader.scss
+++ b/src/components/user-components/user-header/userHeader.scss
@@ -1,6 +1,6 @@
 .header-user {
   display: flex;
-  position: fixed;
+  // position: fixed;
   justify-content: center;
 
   justify-content: space-around;
