add personal-cabinet-org page, fix styles

--- a/src/components/user-components/user-form/userForm.scss
+++ b/src/components/user-components/user-form/userForm.scss
@@ -43,7 +43,7 @@
       color: black;
 
       &:hover {
-        background-color: #4caf50;
+        background-color: #52bf55;
         color: white;
       }
     }
