--- a/src/pages/organization-pages/cabinet-page/cabinetPage.scss
+++ b/src/pages/organization-pages/cabinet-page/cabinetPage.scss
@@ -30,14 +30,16 @@
     justify-content: center;
     margin-top: 40px;
 
-    button {
+    input {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 45px;
+      width: 250px;
       margin: 0px 20px;
       background-color: white;
       border-radius: 8px;
+      border: 1px solid black;
       color: white;
       padding: 10px 5px;
       text-align: center;
