--- a/src/pages/user-pages/auth-page/authPage.scss
+++ b/src/pages/user-pages/auth-page/authPage.scss
@@ -34,6 +34,7 @@
       font-size: 16px;
       transition-duration: 0.3s;
       color: black;
+      margin-top: 15px;
 
       &:hover {
         background-color: #59dd71;
