add main-page, fix sections-page

--- a/src/pages/organization-pages/cabinet-page/cabinetPage.scss
+++ b/src/pages/organization-pages/cabinet-page/cabinetPage.scss
@@ -10,7 +10,7 @@
     flex-direction: column;
     justify-content: center;
     // align-items: center;
-    height: 650px;
+    // height: 650px;
     width: 1200px;
     // border-radius: 20%;
     // border: 10px solid black;
@@ -28,7 +28,7 @@
   .actions-button {
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    margin: 40px 10px;
 
     input {
       display: flex;
