--- a/src/components/admin-components/inactive-user-item/inactiveUserItem.scss
+++ b/src/components/admin-components/inactive-user-item/inactiveUserItem.scss
@@ -21,7 +21,7 @@
   justify-content: center;
   align-items: center;
   height: 45px;
-
+  margin-bottom: 15px;
   background-color: white;
   border-radius: 8px;
   color: white;
