--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  font-family: 'Nunito', Roboto, system-ui, Tahoma, sans-serif;
+  font-family: "Nunito", Roboto, system-ui, Tahoma, sans-serif;
 }
 
 html {
