--- a/src/pages/organization-pages/cabinet-page/cabinetPage.scss
+++ b/src/pages/organization-pages/cabinet-page/cabinetPage.scss
@@ -60,5 +60,12 @@
         color: white;
       }
     }
+
+    .del-button {
+      &:hover {
+        background-color: red;
+        color: white;
+      }
+    }
   }
 }
