--- a/src/pages/general-pages/GeneralSectionPage.scss
+++ b/src/pages/general-pages/GeneralSectionPage.scss
@@ -1,6 +1,15 @@
-.main-sections {
+.block-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+
+  .main-sections {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
