--- a/src/pages/admin-pages/users-page/usersPage.scss
+++ b/src/pages/admin-pages/users-page/usersPage.scss
@@ -1,9 +1,9 @@
-.table {
-  display: block;
-  justify-content: center;
+.user-block {
+  // display: flex;
+  // justify-content: center;
   width: 100%;
   height: 100%;
-  align-items: center;
-  border: 2px solid rgb(169, 50, 50);
+  // align-items: center;
+  // border: 2px solid rgb(169, 50, 50);
   // font-size: 24px;
 }
