--- a/src/components/SectionItem/Sections.scss
+++ b/src/components/SectionItem/Sections.scss
@@ -1,4 +1,52 @@
-.post {
+.block-post {
+  display: flex;
+  // flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background: white;
   border-radius: 10px;
+  margin: 15px;
+
+  .post-cont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 900px;
+    // margin: 5px 0px;
+    // justify-content: center;
+    // border-radius: 10px;
+    // border: 3px solid yellow;
+
+    h2 {
+      padding: 15px 0;
+    }
+
+    .info-descr-org {
+      display: flex;
+      // justify-content: flex;
+      // align-items: center;
+      width: 100%;
+      margin: 5px;
+      padding-left: 15px;
+
+      .block-tel-email {
+        display: flex;
+        justify-content: space-around;
+        // margin: 15px;
+
+        .email {
+          padding-right: 45px;
+        }
+      }
+    }
+
+    .info-descr-section {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      margin: 5px;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
 }
