--- a/src/pages/general-pages/GeneralSectionPage.scss
+++ b/src/pages/general-pages/GeneralSectionPage.scss
@@ -4,7 +4,11 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  // height: 100%;
+
+  h1 {
+    padding: 30px 0;
+  }
 
   .filter {
     border: 1px solid black;
@@ -15,7 +19,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 5px 20px;
+    // padding: 5px 20px;
     background: #f2f2f2;
     border-radius: 10px;
   }
