--- a/src/pages/general-pages/GeneralSectionPage.scss
+++ b/src/pages/general-pages/GeneralSectionPage.scss
@@ -10,6 +10,23 @@
     padding: 30px 0;
   }
 
+  .search-block {
+    display: flex;
+  }
+
+  .select-category {
+    display: flex;
+    align-items: center;
+    // height: 25px;
+    // font-size: 26px;
+
+    select {
+      height: 25px;
+      font-size: 16px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+    }
+  }
+
   .filter {
     border: 1px solid black;
   }
