--- a/src/components/SectionItem/Section-item.scss
+++ b/src/components/SectionItem/Section-item.scss
@@ -21,6 +21,14 @@
       padding: 15px 0;
     }
 
+    span {
+      display: flex;
+      // align-items: flex-end;
+      justify-content: flex-end;
+      padding: 10px;
+      width: 100%;
+    }
+
     .info-descr-org {
       display: flex;
       // justify-content: flex;
@@ -47,6 +55,13 @@
       margin: 5px;
       padding-left: 15px;
       padding-right: 15px;
+    }
+
+    .info-descr-section-days {
+      display: flex;
+      width: 500px;
+      justify-content: space-around;
+      flex-direction: row;
     }
   }
 }
